Rewrite parsing logic